--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -1,5 +1,5 @@
 {{ with .Params.tags }}
 <!-- <i data-feather="tag"></i> -->
 {{ range . }} {{ $href := print (absURL "tags/") (urlize .) }}
-<a class="" href="{{ $href }}">{{ . }}</a>
+<a class="meta-tag" href="{{ $href }}">{{ . }}</a>
 {{ end }} {{ end }}
